# bioemu-multios

./: COMMANDS.md  INSTALL_APPLE.md  MANIFEST.in  README.md  README_FORK.md  pyproject.toml  requirements.txt  setup.py
src/bioemu/: __init__.py  device_utils.py  get_embeds.py  sample.py  so3_sde.py
src/bioemu/colabfold_setup/: setup_m2.sh
src/bioemu/openfold/utils/: rigid_utils.py
tests/: conftest.py  test_m2_compatibility.py  test_sample.py
